tests/machine/x/kt/dataset_where_filter.error
line 66:
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/machine/x/kotlin/dataset_where_filter.kt:66:27: error: unresolved reference. None of the following candidates is applicable because of receiver type mismatch: 
public fun String.compareTo(other: String, ignoreCase: Boolean = ...): Int defined in kotlin.text
        if (person["age"] >= 18) {
                          ^
/workspace/mochi/tests/machine/x/kotlin/dataset_where_filter.kt:67:115: error: unresolved reference. None of the following candidates is applicable because of receiver type mismatch: 
public fun String.compareTo(other: String, ignoreCase: Boolean = ...): Int defined in kotlin.text
            __res.add(mutableMapOf("name" to person["name"], "age" to person["age"], "is_senior" to person["age"] >= 60))
                                                                                                                  ^
/workspace/mochi/tests/machine/x/kotlin/dataset_where_filter.kt:76:31: error: unresolved reference: name
        println(listOf(person.name, "is", person.age, if (person.is_senior) " (senior)" else "").joinToString(" "))
                              ^
/workspace/mochi/tests/machine/x/kotlin/dataset_where_filter.kt:76:50: error: unresolved reference: age
        println(listOf(person.name, "is", person.age, if (person.is_senior) " (senior)" else "").joinToString(" "))
                                                 ^
/workspace/mochi/tests/machine/x/kotlin/dataset_where_filter.kt:76:66: error: unresolved reference: is_senior
        println(listOf(person.name, "is", person.age, if (person.is_senior) " (senior)" else "").joinToString(" "))
                                                                 ^

 65:     for (person in people) {
 66:         if (person["age"] >= 18) {
 67:             __res.add(mutableMapOf("name" to person["name"], "age" to person["age"], "is_senior" to person["age"] >= 60))
